name:                postgres-options
version:             0.3.0.1
synopsis:            An Options type representing options for postgres connections
description:         This package exports an Options type representing options for postgres connections
homepage:            https://github.com/jfischoff/postgres-options#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Fischoff
maintainer:          jonathangfischoff@gmail.com
copyright:           2019 Jonathan Fischoff
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Simple.Options
  build-depends: base >= 4.6 && < 5
               , postgresql-simple
               , optparse-applicative
               , bytestring
               , either
               , optparse-generic
               , data-default
               , split
               , uri-bytestring
               , generic-deriving
  default-language:    Haskell2010
  ghc-options: -Wall
               -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/jfischoff/postgres-options
